--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,7 +17,7 @@
                                 <label for="remember" class="form-check-label">Remember me</label>
                             </div>
                             <div>
-                                <a href="#" class="text-muted">Forgot password?</a>
+                                <a href="{% url 'password_reset' %}" class="text-muted">Forgot password?</a>
                             </div>
                         </div>
                     </div>
