--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -25,7 +25,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ category.name }}</h5>
 
-                        <a href="#" class="btn btn-primary">Tashrif buyurish</a>
+                        <a href="{% url 'category_detail' category.id %}" class="btn btn-primary">Tashrif buyurish</a>
                     </div>
                 </div>
             </div>
